# direct-storage-rs

./: Cargo.toml  bindings.txt  build.rs
.windows/winmd/: Microsoft.Direct3D.DirectStorage.winmd
api-gen/: Cargo.toml
api-gen/src/: main.rs
custom-example/: Cargo.toml
custom-example/src/: main.rs
lib/ARM/: dstorage.lib
lib/ARM64/: dstorage.lib
lib/x86/: dstorage.lib
src/: DStorage.rs  lib.rs  main.rs
