[package]
name = "custom-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
direct-storage-rs = { path = "../" }

[dependencies.windows]
version = "0.52"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Graphics",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Storage_FileSystem",
    "Win32_Security",
]